--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_weight="0">
 
             <Button
-                android:id="@+id/button16"
+                android:id="@+id/InventoryButton"
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:layout_weight="3"
@@ -38,7 +38,7 @@
             android:layout_weight="0">
 
             <Button
-                android:id="@+id/button17"
+                android:id="@+id/ComprarButton"
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:layout_weight="3"
@@ -53,7 +53,7 @@
             android:layout_weight="0">
 
             <Button
-                android:id="@+id/button18"
+                android:id="@+id/TiendasButton"
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:layout_weight="3"
