added: add product to buy to list activity add store to store list activity store main activity etc

--- a/app/src/main/res/layout/activity_acomprar.xml
+++ b/app/src/main/res/layout/activity_acomprar.xml
@@ -60,6 +60,7 @@
         android:layout_marginEnd="250dp"
         android:layout_marginBottom="7dp"
         android:ems="10"
+        android:hint="Presupuesto"
         android:inputType="text"
         android:text="100000"
         app:layout_constraintBottom_toTopOf="@+id/total"
@@ -81,5 +82,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/addProducttoButlist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="9dp"
+        android:text="añadir producto"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/total"
+        app:layout_constraintTop_toBottomOf="@+id/UpdatePre"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
